<resources>
    <string name="app_name">Garbuzov_Cryptocurrency</string>
    <string name="app_display_name">Garbuzov\'s \n Cryptocurrency app</string>

    <string name="menu_home">Home</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_settings">Settings</string>

    <string name="label_1h">1h: </string>
    <string name="label_24h">24h: </string>
    <string name="label_7d">7d: </string>

    <string name="rate_date">Currency rate date: </string>
    <string name="from">From</string>
    <string name="to">To</string>

    <string name="notify_condition_higher">Notify me if the price is above:</string>
    <string name="notify_condition_lower">Or if the price is below:</string>
    <string name="price">Price</string>
    <string name="percent">Percent</string>
    <string name="save">Save</string>
    <string name="channel_description">Sample description</string>
    <string name="message_stonks"> rate is rising!</string>
    <string name="message_destonks"> rate is lowering!</string>

    <string name="converter">Currency converter</string>
    <string name="notifications">Notifications</string>
    <string name="add_notification">Add notification</string>
    <string name="currencies_list">Cryptocurrencies list</string>
</resources>