<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.notifications.AddNotificationFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/default_border_margin"
        android:layout_marginTop="@dimen/default_border_margin"
        android:layout_marginRight="@dimen/default_border_margin"
        android:layout_marginBottom="@dimen/default_border_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <TextView
            android:id="@+id/fromTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/cryptoCurrencyTypesSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/crypto_currency_types_array"
            app:layout_constraintStart_toStartOf="@id/fromTextView"
            app:layout_constraintTop_toBottomOf="@id/fromTextView" />

        <TextView
            android:id="@+id/toTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to"
            app:layout_constraintStart_toEndOf="@id/cryptoCurrencyTypesSpinner"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/currencyTypesSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/currency_types_array"
            app:layout_constraintStart_toStartOf="@id/toTextView"
            app:layout_constraintTop_toBottomOf="@id/toTextView" />

        <TextView
            android:id="@+id/rateValueTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/currencyTypesSpinner"
            app:layout_constraintTop_toBottomOf="@id/toTextView" />

        <TextView
            android:id="@+id/priceHigherTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_border_margin"
            android:text="@string/notify_condition_higher"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cryptoCurrencyTypesSpinner" />

        <LinearLayout
            android:id="@+id/higherLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priceHigherTextView">

            <EditText
                android:id="@+id/priceHigherEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/card_margin_from_card"
                android:layout_marginRight="@dimen/card_margin_from_card"
                android:layout_weight="2"
                android:hint="@string/price"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/percentHigherEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/card_margin_from_card"
                android:layout_marginLeft="@dimen/card_margin_from_card"
                android:layout_weight="1"
                android:hint="@string/percent"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/higherPercentIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="%"/>
        </LinearLayout>

        <TextView
            android:id="@+id/priceLowerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_border_margin"
            android:text="@string/notify_condition_lower"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/higherLayout" />

        <LinearLayout
            android:id="@+id/lowerLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priceLowerTextView">

            <EditText
                android:id="@+id/priceLowerEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/card_margin_from_card"
                android:layout_marginRight="@dimen/card_margin_from_card"
                android:layout_weight="2"
                android:hint="@string/price"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/percentLowerEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/card_margin_from_card"
                android:layout_marginLeft="@dimen/card_margin_from_card"
                android:layout_weight="1"
                android:hint="@string/percent"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/lowerPercentIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="%"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/createNotificationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red_app_color"
        android:text="@string/save"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>