<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/card_margin_from_card"
    android:layout_marginTop="@dimen/card_margin_from_card">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/symbolImageView"
            android:layout_width="@dimen/currency_icon_size"
            android:layout_height="@dimen/currency_icon_size"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toTopOf="@id/stonksData"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_margin_from_card"
            android:layout_marginLeft="@dimen/card_margin_from_card"
            app:layout_constraintStart_toEndOf="@id/symbolImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_margin_from_card"
            android:layout_marginLeft="@dimen/card_margin_from_card"
            app:layout_constraintStart_toEndOf="@id/symbolImageView"
            app:layout_constraintTop_toBottomOf="@id/nameTextView" />

        <TextView
            android:id="@+id/marketCapTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_margin_from_card"
            android:layout_marginLeft="@dimen/card_margin_from_card"
            app:layout_constraintStart_toEndOf="@id/symbolImageView"
            app:layout_constraintTop_toBottomOf="@id/priceTextView" />

        <TextView
            android:id="@+id/volume24HTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/card_margin_from_card"
            android:layout_marginLeft="@dimen/card_margin_from_card"
            app:layout_constraintStart_toEndOf="@id/symbolImageView"
            app:layout_constraintTop_toBottomOf="@id/marketCapTextView" />

        <LinearLayout
            android:id="@+id/stonksData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/card_margin_from_card"
            android:background="@color/light_grey"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/label1HTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_1h"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/percentChange1HTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label24HTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_24h"
                android:layout_weight="1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/percentChange24HTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/label7DTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_7d"
                android:layout_weight="1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/percentChange7DTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>